--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Jewel Collector</title>
+        <title>Jewel Collector Game</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/style.css">
@@ -10,6 +10,10 @@
     </head>
     
     <body>
+    <!--INSERT BANNER CODE HERE-->
+        <div id="banner">
+            <h1 class="jewel">JEWEL COLLECTOR</h1>
+        </div>
 
 
 
