--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     
     <body>
     <!--INSERT BANNER CODE HERE-->
-        <div id="banner">
+        <div id="banner"><img src="assets/images/diamond-jewellery-collection-banner_1920x.jpg">
             <h1 class="jewel">JEWEL COLLECTOR</h1>
+        </div>
+
+        <div id="container">
+            <h2 id="music"></h2>
         </div>
 
 
