added diamond emoji to title

--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
     <body>
     <!--INSERT BANNER CODE HERE-->
         <div id="banner"><img src="assets/images/diamond-jewellery-collection-banner_1920x.jpg">
-            <h1 class="jewel">JEWEL COLLECTOR</h1>
+            <h1 class="jewel">💎JEWEL COLLECTOR💎</h1>
         </div>
 
         <div id="container">
-            <h2 id="music"></h2>
+            <!--ADD MUSIC HERE-->
+            <div id="game-section">
+                <p>Press any key to get started!</p>
+            <div>
+                <h3 class="section-title"></h3>
+            </div>
+            </div>
         </div>
 
 
