centered banner image

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
         <div id="container">
             <!--ADD MUSIC HERE-->
             <div id="game-section">
-                <p>Press any key to get started!</p>
+                <p>Click a Stone to get started!</p>
             <div>
-                <h3 class="section-title"></h3>
+                <!--ADD WINS HERE-->
+                <h3 class="section-title">Wins🤩</h3>
+                <div id="wins"></div>
             </div>
+            
             </div>
         </div>
 
