added more css for h2 and directions

--- a/index.html
+++ b/index.html
@@ -13,6 +13,21 @@
     <!--INSERT BANNER CODE HERE-->
         <div id="banner"><img src="assets/images/diamond-jewellery-collection-banner_1920x.jpg">
             <h1 class="jewel">💎JEWEL COLLECTOR💎</h1>
+
+            <h2 class="howto">How to Play</h2>
+            <p class="directions">
+                You will be given a random number at the start of the game.
+
+                There are four jewel stones below. By clicking on a stone you will add a specific amount of points to your total score.
+
+                You win the game by matching your total score to random number, you lose the game if your total score goes above the random number.
+
+                The value of each stone is hidden from you until you click on it.
+
+                Each time when the game starts, the game will change the values of each stone.
+
+
+            </p>
         </div>
 
         <div id="container">
@@ -24,7 +39,7 @@
                 <h3 class="section-title">Wins🤩</h3>
                 <div id="wins"></div>
             </div>
-            
+
             </div>
         </div>
 
