--- a/index.html
+++ b/index.html
@@ -34,10 +34,28 @@
         </div>
         <!--GAME TIME-->
         <div id="container">
-            <!--FIRST ROW FOR RANDOM NUMBER-->
+            
             <div id="game-section">
                 <p>Click a Stone to get started!</p>
+
+
+                <div class="random-number" id="randNum"></div>
+
+                <div class="jewel-array" id="jewelArray">
+                   <div class="resize">
+                    <button id="amethyst" class="jewel amethyst"><img src="assets/images/amethyst-marquise-png_52718.jpg" alt=""></button></div>
+
+                    <div class="resize">
+                    <button id="emerald" class="jewel emerald"><img src="assets/images/emerald.jpg" alt=""></button></div>
+
+                    <div class="resize">
+                    <button id="ruby" class="jewel ruby"><img src="assets/images/ruby.jpg" alt=""></button></div>
+
+                    <div class="resize">
+                    <button id="diamond" class="jewel diamond"><img src="assets/images/diamond.jpg" alt=""></button></div>
+                </div>
             <div>
+            
                 <!--ADD WINS HERE-->
                 <h3 class="section-title">Wins🤩</h3>
                 <div id="wins"></div>
