final changes to html

--- a/index.html
+++ b/index.html
@@ -56,9 +56,19 @@
                 </div>
             <div>
             
+                <!--ADD TOTAL HERE-->
+                <div class="total-score">
+                        <div>Your total score is:</div>
+                        <br>
+                        <div id="totalScore">0</div>
+                    </div>
                 <!--ADD WINS HERE-->
-                <h3 class="section-title">Wins🤩</h3>
-                <div id="wins"></div>
+                <h3 class="section-title">Wins🤩 and Losses</h3>
+                <div class="wins-loses">
+                        <p>Wins:</p>
+                        <p id="wins">0</p>
+                        <p>Losses:</p>
+                        <p id="losses">0</p>
             </div>
 
             </div>
