added Jquery CDN link to html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/reset.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </head>
     
     <body>
@@ -63,8 +64,9 @@
                         <div id="totalScore">0</div>
                     </div>
                 <!--ADD WINS HERE-->
-                <h3 class="section-title">Wins🤩 and Losses</h3>
                 <div class="wins-loses">
+                <h3 class="section-title">Wins🤩 and Losses</h3>
+            
                         <p>Wins:</p>
                         <p id="wins">0</p>
                         <p>Losses:</p>
